--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="grid wide">
                     <div class="header-list">
                         <div class="header-item__logo">
-                            <a href="/">
+                            <a href="https://hoangfvox.github.io/city_tours/">
                                 <img class="header-logo" src="./assets/img/logo.png" alt="logo">
                             </a>
                         </div>
